buildscript {
    repositories {
        mavenLocal()
        mavenCentral()
        jcenter()
        maven { url 'https://oss.sonatype.org/content/repositories/snapshots' }
    }
    dependencies {
        classpath 'org.codehaus.groovy:groovy-backports-compat23:2.3.5'
        classpath 'org.zeroturnaround:zt-exec:1.6'
        classpath 'com.bmuschko:gradle-nexus-plugin:2.1.1'
        classpath 'me.trnl:clirr-gradle-plugin:0.4'
        classpath 'de.undercouch:gradle-download-task:1.0'
        classpath 'com.github.ben-manes:gradle-versions-plugin:0.6'
    }
}

plugins {
    id 'java-library' 
}

repositories {
    mavenCentral()
    mavenLocal()
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(11)
    }
}


group 'com.bryanreinero'

ext.javaDriverVersion = '3.4.3'
ext.buildDir = './build'


dependencies {
    api "org.mongodb:mongo-java-driver:${javaDriverVersion}"
    api "commons-cli:commons-cli:1.2"
    api 'joda-time:joda-time:2.10.9'
    api'com.google.guava:guava:29.0-jre' 
    api "org.apache.commons:commons-math3:3.0"

    testImplementation 'junit:junit:4.13' 
}

jar {
    archivesBaseName = "firehose-core"
    archiveVersion = '0.0.1'

    manifest {
        attributes 'Implementation-Title': 'Firehose',
                'Implementation-Version': archiveVersion

    }
}
